Fill up outline and the whatDoYouRemember section

--- a/Class Presentations/reveal-presentations/Day3.html
+++ b/Class Presentations/reveal-presentations/Day3.html
@@ -60,6 +60,26 @@
 							<input type="checkbox" id="goal1"/>
 							<label for="goal1">Build an HTML document (computer) (cont'd)</label>
 						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">HTML Semantics</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Iterative Development</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Images</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5"/>
+							<label for="goal5">Input and Buttons</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal6"/>
+							<label for="goal6">Page Navigation</label>
+						</li>
 					</ul>
 				</section>
 
@@ -73,10 +93,40 @@
 
 				<section>
 					<section>
-						<h2>What is HTML?</h2>
+						<h2>What does HTML stand for?</h2>
 					</section>
 					<section>
-						<p>(HyperText Markup Language; markup language used to create websites)</p>
+						<p>HyperText Markup Language</p>
+					</section>
+					<section>
+						<h2>What is HTML used for?</h2>
+					</section>
+					<section>
+						<p>Used to create the content that goes in a website; defines the structure of a website</p>
+					</section>
+					<section>
+						<h2>What is an element?</h2>
+					</section>
+					<section>
+						<p>An element is a part of the HTML webpage</p>
+					</section>
+					<section>
+						<h2>What is a tag?</h2>
+					</section>
+					<section>
+						<p>A tag is a marker that describes the element</p>
+					</section>
+					<section>
+						<h2>What are some examples of HTML tags?</h2>
+					</section>
+					<section>
+						<p>head, body, title, ... (that's what we've learned so far)</p>
+					</section>
+					<section>
+						<h2>How do you write an HTML opening tag? Closing tag? (Someone can come up and write it)</h2>
+					</section>
+					<section>
+						<p>&lt;example&gt; &lt;/example&gt;</p>
 					</section>
 				</section>
 
@@ -91,8 +141,29 @@
 							<input type="checkbox" id="goal1"/>
 							<label for="goal1">Build an HTML document (computer) (cont'd)</label>
 						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">HTML Semantics</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Iterative Development</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Images</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5"/>
+							<label for="goal5">Input and Buttons</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal6"/>
+							<label for="goal6">Page Navigation</label>
+						</li>
 					</ul>
 				</section>
+
 
 				<section>
 					<h2>
@@ -377,6 +448,44 @@ Next we are going to look at these elements&lt;/p>
 					<p>Resources for HTML tags</p>
 					<ul><li>W3 Schools (<a href="www.w3schools.com/tags/">www.w3schools.com/tags/</a>)</li>
 					<li>HTML Dog (<a href="www.htmldog.com/references/html/tags/">www.htmldog.com/references/html/tags/</a>)</li></ul>
+				</section>
+
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked/>
+							<label for="goal0">try{whatDoYouRemember();}</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">Build an HTML document (computer) (cont'd)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">HTML Semantics</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Iterative Development</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Images</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5"/>
+							<label for="goal5">Input and Buttons</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal6"/>
+							<label for="goal6">Page Navigation</label>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>HTML Semantics</h2>
 				</section>
 
 				<section>
