Add slides through iterative development; will be changed to present content better

--- a/Class Presentations/reveal-presentations/Day3.html
+++ b/Class Presentations/reveal-presentations/Day3.html
@@ -62,23 +62,19 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal2"/>
-							<label for="goal2">HTML Semantics</label>
+							<label for="goal2">HTML Semantics and Iterative Development</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal3">Iterative Development</label>
+							<label for="goal3">Images</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
-							<label for="goal4">Images</label>
+							<label for="goal4">Input and Buttons</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal5"/>
-							<label for="goal5">Input and Buttons</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal6"/>
-							<label for="goal6">Page Navigation</label>
+							<label for="goal5">Page Navigation</label>
 						</li>
 					</ul>
 				</section>
@@ -128,6 +124,13 @@
 					<section>
 						<p>&lt;example&gt; &lt;/example&gt;</p>
 					</section>
+					<section>
+						<h2>How do you open an HTML file to edit the code?</h2>
+					</section>
+					<section>
+						<p>1 - through the text editor: select File > Open > (the file) <br />
+						2- Right click on the file > Open With... (the text editor you use)</p>
+					</section>
 				</section>
 
 				<section>
@@ -143,23 +146,19 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal2"/>
-							<label for="goal2">HTML Semantics</label>
+							<label for="goal2">HTML Semantics and Iterative Development</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal3">Iterative Development</label>
+							<label for="goal3">Images</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
-							<label for="goal4">Images</label>
+							<label for="goal4">Input and Buttons</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal5"/>
-							<label for="goal5">Input and Buttons</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal6"/>
-							<label for="goal6">Page Navigation</label>
+							<label for="goal5">Page Navigation</label>
 						</li>
 					</ul>
 				</section>
@@ -463,29 +462,221 @@ Next we are going to look at these elements&lt;/p>
 						</li>
 						<li>
 							<input type="checkbox" id="goal2"/>
-							<label for="goal2">HTML Semantics</label>
+							<label for="goal2">HTML Semantic and Iterative Development</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal3">Iterative Development</label>
+							<label for="goal3">Images</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
-							<label for="goal4">Images</label>
+							<label for="goal4">Input and Buttons</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal5"/>
-							<label for="goal5">Input and Buttons</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal6"/>
-							<label for="goal6">Page Navigation</label>
+							<label for="goal5">Page Navigation</label>
 						</li>
 					</ul>
 				</section>
 
 				<section>
-					<h2>HTML Semantics</h2>
+					<h2>HTML Semantics...</h2>
+					<h3>(Tomato, Tomato)</h3>
+					<aside class="notes">
+						Have students open helloWorldHTML.html in Atom
+					</aside>
+				</section>
+
+				<section>
+					<h2>Semantic Tags</h2>
+					<ul>
+						<li>Elements with a meaning</li>
+						<li>Describes its meaning to the browser and developer</li>
+						<li>Useful for text-to-speech</li>
+						<li>Makes types, hierarchies and relationships clearer</li>
+						<li>HTML5 has new semantic tags that eliminate the need for previous semantic tags.</li>
+					</ul>
+					<aside class="notes">
+						Have students open helloWorldHTML.html in Atom
+					</aside>
+				</section>
+
+				<section>
+					<h2>&lt;em> &lt;/em></h2>
+					<ul>
+						<li>Emphasized text</li>
+						<li>This, by the way, is a phrase tag; it may change what you see the same way as other tags, but
+						it's designed for a specific purpose.</li>
+						<li>Renders on the browser as <i>italicized</i> text</li>
+						<li>Use CSS to add additional effects</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;em>
+Software development is a craft that one must work to develop
+&lt;/em>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>while(writingCode)</h2>
+					<h3>SAVE YOUR PROGRESS!!</h3>
+					<p>File > Save <i>or</i> Ctrl + S</p>
+				</section>
+
+				<section>
+					<h2>...and Iterative Development</h2>
+				</section>
+
+				<section>
+					<h2>Iterative Development</h2>
+					<h3><i>Why?</i></h3>
+					<ul class="fragment"><li>Because waiting to find bugs until we are done writing all our code delays deployment</li></ul>
+					<h3 class="fragment"><i>How?</i></h3>
+					<p class="fragment">Get into the habit of iterating through three steps as you're developing:</p>
+					<ol>
+						<li class="fragment">Write some code</li>
+						<li class="fragment">Test your code</li>
+						<li class="fragment">Fix any bugs</li>
+					</ol>
+				</section>
+
+				<section>
+					<h2>Iterative Development</h2>
+					<p>There are other software development methodologies that development
+						 teams use but most have this short iterative process
+						(in some fashion) in common.</p>
+				</section>
+
+				<section>
+					<h2>&lt;strong> &lt;/strong></h2>
+					<ul>
+						<li>Another phrase tag, shows that text is important</li>
+						<li>Renders on the browser as <b>bold</b> text</li>
+						<li>Use CSS to add additional effects</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;strong>
+Developers develop software that develops their skillsets
+&lt;/strong>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;blockquote> &lt;/blockquote></h2>
+					<ul>
+						<li>Specifies section quoted</li>
+						<li>Usually renders on browsers as indented text</li>
+						<li>In HTML4.01, defines a long quote</li>
+						<li>In HTML5, defines a quote from another source</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;blockquote>
+With attributes like elegant, creative, long-termed, and seeing the
+forest and the trees, our results indicate that good software
+engineering requires engineers to make complex, experienced-driven,
+contextual considerations.
+&lt;/blockquote>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;cite> &lt;/cite></h2>
+					<ul>
+						<li>Citation (HTML4.01)</li>
+						<li>HTML5 defines this as the title of the quote/work.</li>
+						<li>Renders on the browser as <i>italicized</i> text</li>
+						<li>Can be added to the head tag of a blockqote, but it won't be visible
+						on the page.</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;cite>
+https://faculty.washington.edu/ajko/papers/Li2015GreatEngineers.pdf
+&lt;/cite>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;q> &lt;/q></h2>
+					<ul>
+						<li>Defines a short quote</li>
+						<li>Renders on the browser as quotation marks</li>
+						<li>Note: Internet Explorer does not render this</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;q>
+What makes a great software engineer?
+&lt;/q>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;abbr> &lt;/abbr></h2>
+					<ul>
+						<li>Defines an abbreviation</li>
+						<li>Renders on the browser as the abbreviation</li>
+						<li>Full title displays when you mouse over it</li>
+						<li>Needs a title attribute</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;abbr title="Developer Life">
+DL
+&lt;/abbr>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;dfn> &lt;/dfn></h2>
+					<ul>
+						<li>Defines a definition</li>
+						<li>Renders on browsers as <i>italicized</i> text</li>
+						<li>Parent tag of the &lt;dfn&gt; must also contain the definition inside it</li>
+						<li>Many ways to use this tag</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;p> &lt;dfn>Developer&lt;/dfn>
+an artist and craftsperson of software&lt;/p>
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;address> &lt;/address></h2>
+					<ul>
+						<li>Defines the contact information of the author/owner</li>
+						<li>Not for the describption of a postal address</li>
+						<li>Renders on browsers as <i>italicized</i> block</li>
+						<li>Usually included in the &lt;footer&gt; tag</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;footer&gt;
+&lt;address&gt;Written By: (your name)
+Visit us at: the World Wide Web
+&lt;/address&gt;
+&lt;/footer></code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;del> &lt;/del></h2>
+					<ul>
+						<li>Defines deleted text</li>
+						<li>Renders on the browser as <del>strike through</del></li>
+						<li>Used with the &lt;ins&gt; tag (see next slide)</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>&lt;ins> &lt;/ins></h2>
+					<ul>
+						<li>Defines inserted text</li>
+						<li>Renders on the browser as <u>underlined</u></li>
+						<li>Used with the &lt;del&gt; tag</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">
+&lt;p&gt;Coding can be &lt;del&gt;too hard&lt;/del&gt;
+&lt;ins&gt;a great challenge&lt;/ins&gt;&lt;/p&gt;</code></pre>
+				</section>
+
+				<section>
+					<h2>&lt;s> &lt;/s></h2>
+					<ul>
+						<li>Defines text that is no longer correct/accurate/relevant but
+						should not be deleted</li>
+						<li>Also renders on browsers as <s>strike through</s></li>
+						<li>This was redefined by HTML5 (used to be defined as strike-through text)</li>
+					</ul>
+					<pre><code style="word-wrap: break-word;">&lt;p&gt;&lt;s&gt;Development takes a lot of math skills&lt;/s&gt;&lt;/p&gt;
+&lt;p&gt;Development takes creativity and logic&lt;/p&gt;</code></pre>
 				</section>
 
 				<section>
