--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -53,7 +53,7 @@
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal0"/>
+							<input type="checkbox" id="goal0" checked/>
 							<label for="goal0">try{whatDoYouRemember();}</label>
 						</li>
 						<li>
@@ -68,6 +68,7 @@
 							<input type="checkbox" id="goal3"/>
 							<label for="goal3">Page Navigation</label>
 						</li>
+					</ul>
 				</section>
 
 				<section>
@@ -200,23 +201,15 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal1" checked/>
-							<label for="goal1">Build an HTML document (computer) (cont'd)</label>
+							<label for="goal1">Images</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal2" checked/>
-							<label for="goal2">Iterative Development and HTML Semantics</label>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">Forms (feat. Input and Buttons)</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal3" checked/>
-							<label for="goal3">Images</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal4"/>
-							<label for="goal4">Forms (feat. Input and Buttons)</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal5"/>
-							<label for="goal5">Page Navigation</label>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Page Navigation</label>
 						</li>
 					</ul>
 				</section>
@@ -381,23 +374,15 @@ Button text&lt;/button&gt;</code></pre>
 						</li>
 						<li>
 							<input type="checkbox" id="goal1" checked/>
-							<label for="goal1">Build an HTML document (computer) (cont'd)</label>
+							<label for="goal1">Images</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal2" checked/>
-							<label for="goal2">Iterative Development and HTML Semantics</label>
+							<label for="goal2">Forms (feat. Input and Buttons)</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal3" checked/>
-							<label for="goal3">Images</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal4" checked/>
-							<label for="goal4">Forms (feat. Input and Buttons)</label>
-						</li>
-						<li>
-							<input type="checkbox" id="goal5"/>
-							<label for="goal5">Page Navigation</label>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Page Navigation</label>
 						</li>
 					</ul>
 				</section>
@@ -483,6 +468,29 @@ Button text&lt;/button&gt;</code></pre>
 						-What could have gone better?
 						-What will do we to improve?
 					</aside>
+				</section>
+
+				<section>
+					<h2>Now We're Done</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked/>
+							<label for="goal0">try{whatDoYouRemember();}</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">Images</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal2">Forms (feat. Input and Buttons)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" checked/>
+							<label for="goal3">Page Navigation</label>
+						</li>
+					</ul>
+					<p text-align="right">At least...by our definition of done.</p>
 				</section>
 
 		<script src="lib/js/head.min.js"></script>
