Adding more slides into Day4, considering it as Part 2

--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -493,6 +493,45 @@ Button text&lt;/button&gt;</code></pre>
 					<p text-align="right">At least...by our definition of done.</p>
 				</section>
 
+				<div class="slides">
+					<section>
+						<h1>Day 4 (Original) (03/03/2016)</h1>
+						<h3>D-Code</h3>
+					</section>
+
+					<section>
+						<h2>Welcome Back!</h2>
+					</section>
+
+					<section>
+						<h2>Goals</h2>
+						<ul class="checklist">
+							<li>
+								<input type="checkbox" id="goal0"/>
+								<label for="goal0">Block and Inline Elements</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal1"/>
+								<label for="goal1">About CSS</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal2"/>
+								<label for="goal2">CSS Style Precedence</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal3"/>
+								<label for="goal3">Style a Sample Page</label>
+							</li>
+						</ul>
+					</section>
+
+					<section>
+						<h3>But first...</h3>
+						<h2>try{whatDoYouRemember();}</h2>
+					</section>
+
+
+
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
