Reorder intro slides and add to whatDoYouRemember questions

--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -53,7 +53,7 @@
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal0" checked/>
+							<input type="checkbox" id="goal0"/>
 							<label for="goal0">try{whatDoYouRemember();}</label>
 						</li>
 						<li>
@@ -119,6 +119,52 @@
 						<p>1 - through the text editor: select File > Open > (the file) <br />
 						2- Right click on the file > Open With... (the text editor you use)</p>
 					</section>
+					<section>
+						<h2>What is semantic HTML?</h2>
+					</section>
+					<section>
+						<p>Use of HTML to reinforce meaning (semantics) of elements of webpages,,
+						rather than just the presentation</p>
+					</section>
+					<section>
+						<h2>What are some examples of semantic HTML tags?</h2>
+					</section>
+					<section>
+						<p>em, dfn, cite, strong...</p>
+					</section>
+					<section>
+						<h2>What is an attribute?</h2>
+					</section>
+					<section>
+						<p>A modifier of an HTML element; a characteristic that can be changed</p>
+					</section>
+					<h2>What is a value (from attribute-value pair)?</h2>
+				</section>
+				<section>
+					<p>The quality that you can assign to the attribute</p>
+				</section>
+				</section>
+
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked/>
+							<label for="goal0">try{whatDoYouRemember();}</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1"/>
+							<label for="goal1">Images</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">Forms (feat. Input and Buttons)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Page Navigation</label>
+						</li>
+					</ul>
 				</section>
 
 				<section>
@@ -179,11 +225,18 @@
 						<li>Save the image in the images folder as image.jpg</li>
 						<li>Add the image to helloWorld.html</li>
 					</ol>
+					<aside class="notes">Now that you know how to research, we'll build on
+						the skills from yesterday and allow you to figure out how to put this in.
+						Work with people around you to find solutions; when you do, we'll talk
+						about what you did, how it works. If you want to experiment or change
+						something up, feel free; whether or not it works, let us know how it
+						went.
+					</aside>
 				</section>
 
 				<section>
 					<h2>Add a Caption</h2>
-					<pre><code style="word-wrap: break-word;">
+					<pre class="fragment"><code style="word-wrap: break-word;">
 &lt;figure&gt;
 	&lt;img src="images/image.gif" alt="an image"&gt;
 	&lt;br /&gt;
@@ -495,7 +548,7 @@ Button text&lt;/button&gt;</code></pre>
 
 				<div class="slides">
 					<section>
-						<h1>Day 4 (Original) (03/03/2016)</h1>
+						<h1>Day 4 (Even More) (03/03/2016)</h1>
 						<h3>D-Code</h3>
 					</section>
 
