Add the learning quiz activity

--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -41,6 +41,13 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
+					<h2>Just for fun...</h2>
+					<h3>Learning Styles Quiz</h3>
+					<p>Google <strong>"Education planner learning styles quiz"</strong>
+						 and click on the first link. </p>
+				</section>
+
+				<section>
 					<h1>Day 4 (03/03/2016)</h1>
 					<h3>D-Code</h3>
 				</section>
@@ -136,13 +143,16 @@
 						<h2>What is an attribute?</h2>
 					</section>
 					<section>
-						<p>A modifier of an HTML element; a characteristic that can be changed</p>
+						<p>A modifier of an HTML element; a characteristic that can be changed </p>
+						<br />
+						<p class="fragment"> Example: &lt;a&gt; is modified with "href" </p>
 					</section>
-					<h2>What is a value (from attribute-value pair)?</h2>
-				</section>
-				<section>
-					<p>The quality that you can assign to the attribute</p>
-				</section>
+					<section>
+						<h2>What is a value (from attribute-value pair)?</h2>
+					</section>
+					<section>
+						<p>The quality that you can assign to the attribute</p>
+					</section>
 				</section>
 
 				<section>
@@ -235,7 +245,7 @@
 				</section>
 
 				<section>
-					<h2>Add a Caption</h2>
+					<h2>Your turn again...add a caption.</h2>
 					<pre class="fragment"><code style="word-wrap: break-word;">
 &lt;figure&gt;
 	&lt;img src="images/image.gif" alt="an image"&gt;
