Add the original Day4 whatDoYouRemember

--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -593,6 +593,52 @@ Button text&lt;/button&gt;</code></pre>
 						<h2>try{whatDoYouRemember();}</h2>
 					</section>
 
+					<section>
+						<section>
+							<p>Do all elements have opening and closing tags?</p>
+						</section>
+						<section>
+							<p>No.</p>
+							<p class="fragment">What do you call elements that don't have closing tags?</p>
+							<p class="fragment">Empty elements.</p>
+						</section>
+						<section>
+							<p>What’s an example of an empty element? </p>
+						</section>
+						<section>
+							<p>&lt;img /&gt;</p>
+						</section>
+						<section>
+							<p>What is structural HTML for? Don’t use the word structure.</p>
+						</section>
+						<section>
+							<p>Describing where items are on a page</p>
+						</section>
+						<section>
+							<p>What does semantic HTML describe?</p>
+						</section>
+						<section>
+							<p>The meanings of things on the page</p>
+						</section>
+						<section>
+							<p>How do you link to a file in the same folder?</p>
+						</section>
+						<section>
+							<p>&lt;a href="myfile.ext"&gt;</p>
+						</section>
+						<section>
+							<p>How do you link to a file in a folder (called, say, "foldername") that's within your current folder?</p>
+						</section>
+						<section>
+							<p>&lt;a href="foldername/myfile.ext"&gt;</p>
+						</section>
+						<section>
+							<p>How do you link to a file in the parent folder?</p>
+						</section>
+						<section>
+							<p>&lt;a href="../myfile.ext"&gt;</p>
+						</section>
+					</section>
 
 
 		<script src="lib/js/head.min.js"></script>
