Save CSS pictures

--- a/Class Presentations/reveal-presentations/Day4.html
+++ b/Class Presentations/reveal-presentations/Day4.html
@@ -826,6 +826,69 @@ at...&lt;/p&gt;</code></pre>
 						</ul>
 					</section>
 
+					<section>
+						<h2>About CSS</h2>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<ul>
+							<li>Stands for "cascading style sheets"</li>
+							<li>Controls the presentation of the page (what it looks like)</li>
+							<li>Separates presentation from content</li>
+							<li>Read by browser from top to bottom</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<ul>
+							<li>Applies rules to different parts of HTML text to make it look different</li>
+							<li>Treats each element like it lives in an invisible box, then applies that rule to everything in the box.</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<ul>
+							<li>It’s usually a good idea to put your CSS in a separate document.
+								 That way, you can switch styles by just changing a link.</li>
+							<li>If you have to put it in the same document, you can put the
+								 CSS code in a &lt;style&gt;&lt;/style&gt; element inside
+								 the &lt;head&gt;&lt;/head&gt; element.</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<ul>
+							<li>A CSS rule is made up of a selector and a declaration.</li>
+							<li>Selector: tells you which element(s) the rule applies to.</li>
+							<li>Declaration: tells you how the element(s) should be styled.</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<img src="../presentation-images/day4/cssrule.png" alt="CSS rule">
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<ul>
+							<li>A declaration is made up of a property and a value.</li>
+							<li>Property/value same as the key-value pairs we talked about</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>CSS</h2>
+						<img src="../presentation-images/day4/cssdeclaration.png" alt="CSS declaration">
+					</section>
+
+
+
+
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
