update goals checklists

--- a/Class Presentations/reveal-presentations/CreativeExpressionAndReview.html
+++ b/Class Presentations/reveal-presentations/CreativeExpressionAndReview.html
@@ -91,7 +91,7 @@
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal1"/>
+							<input type="checkbox" id="goal1" checked/>
 							<label for="goal1">Creative Expression</label>
 						</li>
 						<li>
@@ -113,6 +113,28 @@
 					<h2>Presentations</h2>
 				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">Creative Expression</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal2">Presentations</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Review</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Look Ahead</label>
+						</li>
+					</ul>
+				</section>
+
 				<section data-background="../presentation-images/template/loading.jpg">
 				</section>
 
@@ -124,15 +146,15 @@
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal1"/>
+							<input type="checkbox" id="goal1" checked/>
 							<label for="goal1">Creative Expression</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal2"/>
+							<input type="checkbox" id="goal2" checked/>
 							<label for="goal2">Presentations</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal3"/>
+							<input type="checkbox" id="goal3" checked/>
 							<label for="goal3">Review</label>
 						</li>
 						<li>
@@ -160,19 +182,19 @@
 					<h2>And Now We're Done</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal1"/>
+							<input type="checkbox" id="goal1" checked/>
 							<label for="goal1">Creative Expression</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal2"/>
+							<input type="checkbox" id="goal2" checked/>
 							<label for="goal2">Presentations</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal3"/>
+							<input type="checkbox" id="goal3" checked/>
 							<label for="goal3">Review</label>
 						</li>
 						<li>
-							<input type="checkbox" id="goal4"/>
+							<input type="checkbox" id="goal4" checked/>
 							<label for="goal4">Look Ahead</label>
 						</li>
 					</ul>
